// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats-with-reports.json, multiple-extensions.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-reports",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-1",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-2",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-with-reports.json, single-extension-a.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "foo",
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-reports",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, multiple-extensions.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-1",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-2",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, single-extension-a.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, multiple-extensions.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-1",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension-2",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, single-extension-a.json, 1`] = `
{
  "__statoscope": {
    "extensions": [
      {
        "descriptor": {
          "name": "@statoscope/stats-extension-custom-extension",
        },
        "payload": {
          "compilations": [
            {
              "reports": [
                {
                  "id": "baz",
                  "view": [],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;
